// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errorhandler accept as array should fail and return html 1`] = `
Response {
  "$rawBody": "<!doctype html>
<html lang=\\"en\\">
<head><meta charset=\\"utf-8\\"><title>Error</title></head>
<body>
<pre>{
 &nbsp;&quot;status&quot;: 500,
 &nbsp;&quot;error&quot;: &quot;Internal Server Error&quot;,
 &nbsp;&quot;message&quot;: &quot;boom!&quot;
}</pre>
</body>
</html>",
  "headers": Headers {
    "object": Object {
      "content-length": "265",
      "content-security-policy": "default-src 'self'",
      "content-type": "text/html",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 500,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`errorhandler accept html should fail and return html 1`] = `
Response {
  "$rawBody": "<!doctype html>
<html lang=\\"en\\">
<head><meta charset=\\"utf-8\\"><title>Error</title></head>
<body>
<pre>{
 &nbsp;&quot;status&quot;: 500,
 &nbsp;&quot;error&quot;: &quot;Internal Server Error&quot;,
 &nbsp;&quot;message&quot;: &quot;boom!&quot;
}</pre>
</body>
</html>",
  "headers": Headers {
    "object": Object {
      "content-length": "265",
      "content-security-policy": "default-src 'self'",
      "content-type": "text/html",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 500,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`errorhandler accept json should fail and return json 1`] = `
Response {
  "$rawBody": "{\\"status\\":500,\\"error\\":\\"Internal Server Error\\",\\"message\\":\\"boom!\\"}",
  "headers": Headers {
    "object": Object {
      "content-length": "64",
      "content-type": "application/json",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 500,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`errorhandler default accepts should fail gracefully with empty error 1`] = `
Response {
  "$rawBody": "<!doctype html>
<html lang=\\"en\\">
<head><meta charset=\\"utf-8\\"><title>Error</title></head>
<body>
<pre>{
 &nbsp;&quot;status&quot;: 500,
 &nbsp;&quot;error&quot;: &quot;Internal Server Error&quot;,
 &nbsp;&quot;message&quot;: &quot;Empty error: undefined&quot;
}</pre>
</body>
</html>",
  "headers": Headers {
    "object": Object {
      "content-length": "282",
      "content-security-policy": "default-src 'self'",
      "content-type": "text/html",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 500,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`errorhandler default accepts should fail gracefully with non-error 1`] = `
Response {
  "$rawBody": "<!doctype html>
<html lang=\\"en\\">
<head><meta charset=\\"utf-8\\"><title>Error</title></head>
<body>
<pre>{
 &nbsp;&quot;status&quot;: 500,
 &nbsp;&quot;error&quot;: &quot;Internal Server Error&quot;,
 &nbsp;&quot;message&quot;: &quot;test&quot;
}</pre>
</body>
</html>",
  "headers": Headers {
    "object": Object {
      "content-length": "264",
      "content-security-policy": "default-src 'self'",
      "content-type": "text/html",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 500,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`errorhandler default accepts should render an error 1`] = `
Response {
  "$rawBody": "<!doctype html>
<html lang=\\"en\\">
<head><meta charset=\\"utf-8\\"><title>Error</title></head>
<body>
<pre>{
 &nbsp;&quot;status&quot;: 500,
 &nbsp;&quot;error&quot;: &quot;Internal Server Error&quot;,
 &nbsp;&quot;message&quot;: &quot;boom!&quot;
}</pre>
</body>
</html>",
  "headers": Headers {
    "object": Object {
      "content-length": "265",
      "content-security-policy": "default-src 'self'",
      "content-type": "text/html",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 500,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`errorhandler default accepts should render boom status errors 1`] = `
Response {
  "$rawBody": "<!doctype html>
<html lang=\\"en\\">
<head><meta charset=\\"utf-8\\"><title>Error</title></head>
<body>
<pre>{
 &nbsp;&quot;statusCode&quot;: 400,
 &nbsp;&quot;error&quot;: &quot;Bad Request&quot;,
 &nbsp;&quot;message&quot;: &quot;data has an issue&quot;
}</pre>
</body>
</html>",
  "headers": Headers {
    "object": Object {
      "content-length": "271",
      "content-security-policy": "default-src 'self'",
      "content-type": "text/html",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 400,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`errorhandler default accepts should render http errors status error 1`] = `
Response {
  "$rawBody": "<!doctype html>
<html lang=\\"en\\">
<head><meta charset=\\"utf-8\\"><title>Error</title></head>
<body>
<pre>{
 &nbsp;&quot;status&quot;: 400,
 &nbsp;&quot;error&quot;: &quot;Bad Request&quot;,
 &nbsp;&quot;message&quot;: &quot;data has an issue&quot;
}</pre>
</body>
</html>",
  "headers": Headers {
    "object": Object {
      "content-length": "267",
      "content-security-policy": "default-src 'self'",
      "content-type": "text/html",
      "x-content-type-options": "nosniff",
    },
  },
  "status": 400,
  "statusText": "",
  "trailer": Promise {},
}
`;
